# turtlebot3-fira

./: 2019tb3  README.md  RobotRace程式使用說明.txt
models/Toilet/: model-1_4.sdf  model.config
models/Toilet/meshes/: Toilet.stl
models/wall_toilet/: model.config  model.sdf
motion/: CMakeLists.txt  motion.ino  package.xml
motion/motion/: CMakeLists.txt  main.cpp  nodehandle.cpp  nodehandle.h
motion/motion_detection/: CMakeLists.txt  main.cpp  nodehandle.cpp  nodehandle.h
strategy/: CMakeLists.txt  package.xml
strategy/scripts/: disableshoot.py  motion.py  strategy-test-ok.py  strategy2019-chen.py  strategy2019.py  test.py  wrs_patrol.py
strategy/srv/: web_coordinate.srv
tb3_web/: CoordinatesMap.js  tb3_race-chen.html  tb3_race.html
tb3_web/css/: form.css
tb3_web/js/ros/: CoordinatesMap.js  RosParameter.js  Rosservice.js  Rostopic.js  video.js
turtlebot3/turtlebot3_bringup/launch/: robotrace.launch  wrs.launch
turtlebot3/turtlebot3_slam/launch/: turtlebot3_slam.launch
usb_cam/launch/: usb_cam-test.launch
vision/config/: tb3.yaml
vision/image_converter/: image_converter.cpp  image_converter.h  main.cpp  nodehandle.cpp  nodehandle.h
vision/launch/: vision.launch
